Docker Descktop теперь держит бд

--- a/database.properties
+++ b/database.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://localhost:5432/wallet_service
-db.username=postgres
-db.password=C2DnNimJTzte4XlCkwqM
+db.url=jdbc:postgresql://localhost:5432/mydb
+db.username=wallet
+db.password=1234
